--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.userList.UserListFragment">
+        tools:context=".ui.fragments.userList.UserListFragment">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUser"
