--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.MainActivity">
+        tools:context=".ui.activities.MainActivity">
 
         <!--AppBar Main and Toolbar-->
         <include
@@ -38,8 +38,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:navGraph="@navigation/spokesly_navigation"
-                tools:layout="@layout/fragment_home" />
+                app:navGraph="@navigation/mygate_navigation"
+                tools:layout="@layout/fragment_post" />
 
             <!--Bottom Navigation-->
             <com.google.android.material.bottomnavigation.BottomNavigationView
