--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,27 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_shop"
-        android:title="Home" />
-
-    <item
         android:id="@+id/postsFragment"
         android:icon="@drawable/ic_shop"
         android:title="Posts" />
 
     <item
         android:id="@+id/contactsFragment"
-        android:icon="@drawable/ic_shop"
+        android:icon="@drawable/ic_contacts"
         android:title="Contacts" />
 
     <item
         android:id="@+id/usersFragment"
-        android:icon="@drawable/ic_shop"
+        android:icon="@drawable/ic_user"
         android:title="User List" />
 
-    <item
-        android:id="@+id/postImageFragment"
-        android:icon="@drawable/ic_shop"
-        android:title="Post Image" />
 </menu>
